--- a/lang/zh-cn.json
+++ b/lang/zh-cn.json
@@ -233,6 +233,7 @@
         "GraphHelp": "更多关于 Matomo 显示图表的资讯",
         "HelloUser": "您好，%s！",
         "Help": "帮助",
+        "HelpResources": "帮助资源",
         "HelpTranslatePiwik": "也许你想%1$s帮助我们改进Matomo翻译%2$s？",
         "Hide": "隐藏",
         "HoursMinutes": "%1$s 小时 %2$s 分",
@@ -244,6 +245,7 @@
         "InvalidResponse": "接收到的数据无效。",
         "IP": "IP",
         "JsTrackingTag": "JavaScript 跟踪代码",
+        "KpiMetric": "KPI指标",
         "Language": "语言",
         "Languages": "语言",
         "LastDays": "最近 %s 天 (包括今天)",
@@ -302,6 +304,8 @@
         "OneVisit": "1 次访问",
         "OnlyEnterIfRequired": "在您的 SMTP 服务器需要用户名时才需要输入",
         "OnlyEnterIfRequiredPassword": "在您的 SMTP 服务器需要密码时才需要输入",
+        "SmtpFromEmailHelp": "默认为noreply @ {DOMAIN}，其中{DOMAIN}将替换为Matomo域“%1$s”。<br>如果您发送邮件不起作用，则可能需要设置此地址以匹配SMTP用户名。",
+        "NameShownInTheSenderColumn": "发件人列中显示的名称",
         "OnlyUsedIfUserPwdIsSet": "设定用户名\/密码后才生效，如果您不确定使用何种方法，请询问您的服务商。",
         "OpenSourceWebAnalytics": "开源网站流量分析工具",
         "OperationAtLeast": "至少",
@@ -335,6 +339,7 @@
         "Piechart": "圆饼图",
         "Print": "打印",
         "Profiles": "简介",
+        "MatomoIsACollaborativeProjectYouCanContributeAndDonateNextRelease": "%1$sMatomo%2$s，以前称为Piwik是%7$sMatomo团队%8$s的成员以及全球其他许多贡献者为您带来的一个协作项目。<br\/>如果您是Matomo的粉丝，可以提供帮助：了解%3$s如何参与Matomo%4$s或%5$s现在捐赠%6$s以帮助资助Matomo的下一个发行！",
         "PiwikXIsAvailablePleaseNotifyPiwikAdmin": "%1$s可用。请通知%2$sMatomo管理员%3$s。",
         "PiwikXIsAvailablePleaseUpdateNow": "Matomo %1$s 已经发布。 %2$s 请立即更新！%3$s (查看 %4$s 与%5$s 的差异)。",
         "PleaseContactYourPiwikAdministrator": "请联系您的 Matomo 管理员",
@@ -365,6 +370,7 @@
         "Remove": "删除",
         "Report": "访客报表",
         "ReportGeneratedFrom": "报表数据的时间段是 %s",
+        "ReportRatioTooltip": "'%1$s'代表分段%5$s中%3$s %4$s中的%2$s与%6$s。",
         "Reports": "报表",
         "ReportsContainingTodayWillBeProcessedAtMostEvery": "最多每X秒进行归档报告",
         "RearchiveTimeIntervalOnlyForTodayReports": "这只会影响今天的报告（或任何其他日期范围包括今天）",
@@ -398,6 +404,8 @@
         "SmtpPort": "SMTP 端口",
         "SmtpServerAddress": "SMTP 服务器地址",
         "SmtpUsername": "SMTP 用户",
+        "SmtpFromName": "名称中的SMTP",
+        "SmtpFromAddress": "来自地址的SMTP",
         "Source": "来源",
         "StatisticsAreNotRecorded": "Matomo 访客跟踪已禁用! 在 config\/config.ini.php 文件中设置 record_statistics = 1 启用跟踪",
         "Subtotal": "小计",
@@ -412,6 +420,7 @@
         "ToDeleteAllFilesRunThisCommand": "要一次性删除这些文件，你可以运行此命令：",
         "Total": "总额",
         "Totals": "总计",
+        "TotalRatioTooltip": "这个%1$s在所有%2$s%3$s的%4$s中。",
         "TotalRevenue": "订单总额",
         "TotalVisitsPageviewsActionsRevenue": "(总访问量: %1$s 访问者, %2$s 浏览量, %3$s 活动者, %4$s 收入)",
         "TrackingScopeAction": "活动",
@@ -489,9 +498,20 @@
         "YouAreViewingDemoMessage": "您正在观看%1$sMatomo%2$s的演示",
         "YouMustBeLoggedIn": "您必须登录才能使用这个功能。",
         "YourChangesHaveBeenSaved": "修改已保存。",
+        "YourSessionHasExpired": "您的会话因不活动而过期。 请登录访问更多内容。",
         "ThankYouForUsingMatomo": "感谢您使用Matomo",
         "TheMatomoTeam": "Matomo 团队",
-        "PleaseTryAgain": "请再试一次"
+        "PleaseTryAgain": "请再试一次",
+        "ComparisonRatioTooltip": "与%3$s的“ %2$s”细分相比，这是%1$s的变化。",
+        "ComparisonCardTooltip1": "%2$s上的“ %1$s”包含所有访问中的%3$s个（总共%5$s个访问中的%4$s个）。",
+        "ComparisonCardTooltip2": "访问次数相差%1$s，而%3$s则相差%2$s。",
+        "VisualizationDoesNotSupportComparison": "此可视化不支持段\/期间比较。",
+        "ChangeInX": "换%1$s",
+        "Comparisons": "比较",
+        "ClickToRemoveComp": "单击以删除此比较。",
+        "MaximumNumberOfSegmentsComparedIs": "可同时比较的最大细分数为%s。",
+        "CompareDatesParamMustMatchComparePeriods": "%1$s查询参数长度必须匹配%2$s查询参数长度。",
+        "MaximumNumberOfPeriodsComparedIs": "可同时比较的最大周期数为%s。"
     },
     "Mobile": {
         "AboutPiwikMobile": "关于 Matomo 移动版",
