--- a/plugins/UsersManager/lang/pt-br.json
+++ b/plugins/UsersManager/lang/pt-br.json
@@ -18,7 +18,7 @@
         "AnonymousUserHasViewAccess": "Obs: o usuário %1$s tem acesso %2$s para este site.",
         "AnonymousUserHasViewAccess2": "Seus relatórios de análise e suas informações de visitantes são visíveis publicamente.",
         "ApplyToAllWebsites": "Aplicar a todos os sites",
-        "ChangeAllConfirm": "Você tem certeza que quer dar acesso a '%s' para todos os websites?",
+        "ChangeAllConfirm": "Você tem certeza que quer dar acesso a '%s' para todos os sites?",
         "ClickHereToDeleteTheCookie": "Clique aqui para excluir o cookie e deixar o Matomo rastrear suas visitas",
         "ClickHereToSetTheCookieOnDomain": "Clique aqui para definir um cookie que excluirá suas visitas em sites rastreados pelo Matomo em %s",
         "ConfirmGrantSuperUserAccess": "Você realmente deseja conceder a '%s' o acesso de Super Usuário? Aviso: o usuário terá acesso a todos os sites e será capaz de executar tarefas administrativas.",
@@ -29,8 +29,8 @@
         "EmailYourAdministrator": "%1$sEnviar e-mail a seu administrador sobre este problema%2$s.",
         "EnterUsernameOrEmail": "Digite um nome de usuário ou endereço de e-mail",
         "ExceptionAccessValues": "O parâmetro de acesso deve conter um dos seguintes valores: [ %1$s ], '%2$s' fornecido.",
-        "ExceptionNoRoleSet": "Nenhuma regra foi definida, mas uma delas precisa ser: %s",
-        "ExceptionMultipleRoleSet": "Apenas uma regra pode ser definida, mas várias foram definidas. Use somente uma delas: %s",
+        "ExceptionNoRoleSet": "Nenhum perfil está definido, mas um desses precisa ser definido: %s",
+        "ExceptionMultipleRoleSet": "Apenas um perfil pode ser definido, mas vários foram definidos. Use somente um desses: %s",
         "ExceptionAnonymousNoCapabilities": "Você não pode conceder nenhuma capacidade para o usuário 'anônimo'.",
         "ExceptionAnonymousAccessNotPossible": "Você pode definir somente acesso %1$s ou %2$s acesso para o usuário 'anônimo(a)'.",
         "ExceptionDeleteDoesNotExist": "O usuário '%s' não existe portanto não é possível excluí-lo.",
@@ -62,7 +62,7 @@
         "ConfirmWithPassword": "Por favor digite sua senha para confirmar esta alteração.",
         "InjectedHostCannotChangePwd": "Você está visitando com um host desconhecido (%1$s). Você não pode mudar sua senha até que este problema seja resolvido.",
         "LastSeen": "Visto por último",
-        "MainDescription": "Decida quais usuários têm acesso a seus sites. Você também pode dar acesso a todos os sites de uma só vez, escolhendo \"Aplicar a todos os websites\" no seletor de website.",
+        "MainDescription": "Decida quais usuários têm acesso a seus sites. Você também pode dar acesso a todos os sites de uma só vez, escolhendo \"Aplicar a todos os sites\" no seletor de site.",
         "ManageAccess": "Gerenciar acesso",
         "MenuAnonymousUserSettings": "Configurações de usuário anônimo",
         "MenuUsers": "Usuários",
@@ -73,44 +73,57 @@
         "NoUsersExist": "Não há usuários ainda.",
         "PluginDescription": "O Gerenciamento de Usuários permite que você adicione novos usuários, edite usuários existentes e dê a eles acesso para visualizar ou administrar sites.",
         "PrivAdmin": "Administrador",
-        "PrivAdminDescription": "Usuários com esse papel podem gerenciar um website a dar acesso a esse website para outros usuários. Eles também podem fazer qualquer coisa que o papel %s pode fazer.",
+        "PrivAdminDescription": "Usuários com este perfil podem gerenciar um site e dar acesso a esse site para outros usuários. Eles também podem fazer qualquer coisa que o perfil %s pode fazer.",
         "PrivWrite": "Escrever",
-        "PrivWriteDescription": "Usuários com esta regra pode visualizar todo o conteúdo, além de criar, gerenciar e excluir entidades como Metas, Funis, Mapas de Calor, Gravação de Sessão e Formulários para este site.",
+        "PrivWriteDescription": "Usuários com este perfil podem visualizar todo o conteúdo, além de criar, gerenciar e excluir entidades como Metas, Funis, Mapas de Calor, Gravações de Sessão e Formulários para este site.",
         "PrivNone": "Sem acesso",
         "PrivView": "Visualização",
-        "PrivViewDescription": "Um usuário com esse papel pode visualizar todos os relatórios.",
+        "PrivViewDescription": "Um usuário com este perfil pode visualizar todos os relatórios.",
         "RemoveUserAccess": "Remover acesso para '%1$s' para %2$s.",
         "ReportDateToLoadByDefault": "Relate data para carregar por padrão",
         "ReportToLoadByDefault": "Relate para carregar por padrão",
         "SuperUserAccessManagement": "Gerenciar o acesso do Super Usuário",
         "SuperUserAccessManagementGrantMore": "Você pode conceder o acesso de Super Usuário a outros usuários do Matomo aqui. Utilize este recurso com cuidado.",
-        "SuperUserAccessManagementMainDescription": "Super usuários têm as maiores permissões. Eles podem executar todas as tarefas administrativas, tais como adição de novos websites para monitorar, adicionar usuários, alterar permissões de usuários, ativar e desativar plugins e até mesmo instalar novos plugins no Mercado.",
-        "TheLoginScreen": "Tela de login",
-        "ThereAreCurrentlyNRegisteredUsers": "Existem actualmente %s usuários registrados.",
-        "TokenAuth": "Token de autenticação API",
+        "SuperUserAccessManagementMainDescription": "Super usuários têm as maiores permissões. Eles podem executar todas as tarefas administrativas, tais como adição de novos sites para monitorar, adicionar usuários, alterar permissões de usuários, ativar e desativar plugins e até mesmo instalar novos plugins do Mercado.",
+        "TheLoginScreen": "A tela de login",
+        "ThereAreCurrentlyNRegisteredUsers": "Existem atualmente %s usuários registrados.",
+        "TokenAuth": "Token de autenticação da API",
+        "TokenRegenerateConfirmSelf": "Alterar o token de autenticação da API irá invalidar o seu próprio token. Se o token atual estiver em uso, você precisa atualizar todos os clientes da API com o novo token gerado. Você quer mesmo alterar o seu token de autenticação?",
         "TokenRegenerateTitle": "Regenerar",
         "TypeYourPasswordAgain": "Digite sua nova senha novamente.",
-        "User": "Usurário",
-        "UserHasPermission": "%1$s tem atualmente %2$s acesso para %3$s.",
+        "User": "Usuário",
+        "UserHasPermission": "%1$s tem atualmente acesso %2$s para %3$s.",
         "UserHasNoPermission": "%1$s tem atualmente %2$s para %3$s",
         "UsersManagement": "Gerenciamento de usuários",
         "UsersManagementMainDescription": "Crie novos usuários ou atualize os usuários existentes. Você poderá então ajustar as permissões deles acima.",
         "WhenUsersAreNotLoggedInAndVisitPiwikTheyShouldAccess": "Quando os usuários não estão conectados e visitam o Matomo, eles devem ver inicialmente.",
         "YourUsernameCannotBeChanged": "Seu nome de usuário não pode ser alterado.",
         "YourVisitsAreIgnoredOnDomain": "%1$s Suas visitas são ignoradas pelo Matomo em %2$s %3$s (o Matomo ignora o cookie encontrado em seu navegador).",
-        "YourVisitsAreNotIgnored": "%1$sSuas visitas não são ignoradas pelo Matomo%2$s (o Matomo ignora o cookie não encotrado em seu navegador)",
-        "AtLeastView": "Visualizado por último",
+        "YourVisitsAreNotIgnored": "%1$sSuas visitas não são ignoradas pelo Matomo%2$s (o cookie para ignorar o Matomo não foi encontrado em seu navegador).",
+        "AddUserNoInitialAccessError": "Novos usuários devem ter acesso a um site, por favor defina o parâmetro 'initialIdSite'.",
+        "AtLeastView": "Pelo menos visualizar",
         "ManageUsers": "Gerenciar Usuários",
+        "ManageUsersDesc": "Crie novos usuários ou atualize os usuários existentes. Então você pode definir as permissões deles aqui também.",
+        "NoAccessWarning": "Este usuário não tem acesso a um site. Quando ele fizer login, ele verá uma mensagem de erro. Para evitar isto, conceda acesso a um site abaixo.",
         "BulkActions": "Ações em massa",
-        "SetPermission": "Definir Permissão",
-        "RemovePermissions": "Remover Permissões",
-        "Role": "Regras",
-        "TheDisplayedWebsitesAreSelected": "Os sites %1$s mostrados estão selecionado",
+        "SetPermission": "Definir permissão",
+        "RemovePermissions": "Remover permissões",
+        "RolesHelp": "Perfis determinam o que um usuário pode fazer no Matomo em relação a um site específico. Saiba mais sobre os perfis %1$sVisualizar%2$s e %3$sAdministrador%4$s.",
+        "Role": "Perfil",
+        "TheDisplayedWebsitesAreSelected": "Os %1$s sites exibidos estão selecionados.",
         "ClickToSelectAll": "Clique para selecionar tudo %1$s.",
-        "AllWebsitesAreSelected": "Todos %1$s sites estão selecionados.",
+        "AllWebsitesAreSelected": "Todos os %1$s sites estão selecionados.",
+        "ClickToSelectDisplayedWebsites": "Clique para selecionar os %1$s sites exibidos.",
+        "DeletePermConfirmSingle": "Você tem certeza de que deseja remover o acesso de %1$s ao %2$s?",
+        "DeletePermConfirmMultiple": "Você tem certeza de que deseja remover o acesso de %1$s aos %2$s sites selecionados?",
+        "ChangePermToSiteConfirmSingle": "Você tem certeza de que deseja alterar o perfil de %1$s em %2$s para %3$s?",
+        "ChangePermToSiteConfirmMultiple": "Você tem certeza de que deseja alterar o perfil de %1$s nos %2$s sites selecionados para %3$s?",
         "BasicInformation": "Informação básica",
         "Permissions": "Permissões",
         "SuperUserAccess": "Acesso super usuário",
+        "FirstSiteInlineHelp": "É necessário dar a um novo usuário, em sua criação, um perfil de visualização para um site. Se nenhum acesso for dado, o usuário verá um erro ao fazer login. Você pode conceder mais permissões após a criação do usuário na aba 'Permissões' que irá aparecer na esquerda.",
+        "SuperUsersPermissionsNotice": "Super usuários têm acesso de administrador em todos os sites, então não há necessidade de gerenciar suas permissões por site.",
+        "SuperUserIntro1": "Super usuários têm as maiores permissões. Eles podem executar todas as tarefas administrativas, tais como adição de novos sites para monitorar, adicionar usuários, alterar permissões de usuários, ativar e desativar plugins e até mesmo instalar novos plugins do Mercado. Você pode conceder acesso de Super Usuário para outros usuários do Divezone aqui.",
         "SuperUserIntro2": "Por favor, use essa funcionalidade com cuidado.",
         "HasSuperUserAccess": "Possui Acesso Super Usuário",
         "AreYouSure": "Você tem certeza?",
@@ -120,6 +133,15 @@
         "FilterByWebsite": "Filtrar por site",
         "ShowAll": "Exibir tudo",
         "Username": "Nome de Usuário",
-        "RoleFor": "Regra para"
+        "RoleFor": "Perfil para",
+        "RemoveAllAccessToThisSite": "Remover todo acesso a este site",
+        "DeleteUserPermConfirmSingle": "Você tem certeza de que deseja alterar o perfil de %1$s para %2$s em %3$s?",
+        "DeleteUserPermConfirmMultiple": "Você tem certeza de que deseja alterar os perfis dos %1$s usuários selecionados para %2$s em %3$s?",
+        "AnonymousUserRoleChangeWarning": "Conceder ao usuário %1$s o perfil %2$s irá tornar os dados deste site públicos e disponíveis a todos, mesmo quem não tem um login Matomo.",
+        "GiveAccessToAll": "Dar a este usuário acesso a todos os sites",
+        "OrManageIndividually": "Ou gerencie o acesso deste usuário em cada site individualmente.",
+        "ChangePermToAllSitesConfirm": "Você tem certeza de que deseja dar ao usuário %1$s acesso %2$s a todo site que você atualmente tem acesso de administrador?",
+        "ChangePermToAllSitesConfirm2": "Obs: isto irá afetar apenas os sites existentes atualmente. Novos sites que você criar não estarão acessíveis automaticamente para este usuário.",
+        "IncludedInUsersRole": "Incluído no perfil deste usuário."
     }
 }
