--- a/lang/es.json
+++ b/lang/es.json
@@ -233,6 +233,7 @@
         "GraphHelp": "Más información sobre la visualización de gráficos en Matomo.",
         "HelloUser": "¡Hola, %s!",
         "Help": "Ayuda",
+        "HelpResources": "Recursos de ayuda",
         "HelpTranslatePiwik": "¿Quizá te gustaría %1$sayudarnos a mejorar las traducciones de Matomo%2$s?",
         "Hide": "ocultar",
         "HoursMinutes": "%1$s horas %2$s min",
@@ -244,6 +245,7 @@
         "InvalidResponse": "Los datos recibidos son inválidos.",
         "IP": "IP",
         "JsTrackingTag": "Código de monitoreo JavaScript",
+        "KpiMetric": "Metrica KPI",
         "Language": "Idioma",
         "Languages": "Idiomas",
         "LastDays": "Últimos %s días (incluyendo hoy)",
@@ -302,6 +304,8 @@
         "OneVisit": "1 visita",
         "OnlyEnterIfRequired": "Solo ingrese un nombre de usuario SMTP si el servidor lo solicita.",
         "OnlyEnterIfRequiredPassword": "Solo ingrese una contraseña si su servidor SMTP lo solicita.",
+        "SmtpFromEmailHelp": "El valor predeterminado es noreply @ {DOMAIN}, donde {DOMAIN} será reemplazado por su dominio Matomo \"%1$s\".<br> Si el envío de correos no funciona para usted, es posible que deba configurar esta dirección para que coincida con su nombre de usuario SMTP.",
+        "NameShownInTheSenderColumn": "El nombre que se muestra en la columna del remitente.",
         "OnlyUsedIfUserPwdIsSet": "Sólo se utiliza si se establece un nombre de usuario\/contraseña, pregunte a su proveedor si no está seguro que método utilizar.",
         "OpenSourceWebAnalytics": "Plataforma de análisis libre",
         "OperationAtLeast": "Al menos",
