Fix column selection issue and add sparklines for new metrics

--- a/plugins/VisitFrequency/lang/en.json
+++ b/plugins/VisitFrequency/lang/en.json
@@ -18,6 +18,11 @@
         "ColumnUniqueReturningVisitors": "Unique returning visitors",
         "ColumnNewUsers": "New Users",
         "ColumnReturningUsers": "Returning Users",
+        "NewActions": "actions by the new visits",
+        "NewAverageVisitDuration": "average visit duration for new visitors",
+        "NewAvgActions": "actions per new visit",
+        "NewBounceRate": "new visits have bounced (left the website after one page)",
+        "NewVisits": "new visits",
         "PluginDescription": "Reports metrics about your first time new visitors and returning visitors.",
         "ReturnActions": "actions by the returning visits",
         "ReturnAverageVisitDuration": "average visit duration for returning visitors",
