--- a/plugins/CoreAdminHome/lang/en.json
+++ b/plugins/CoreAdminHome/lang/en.json
@@ -114,8 +114,8 @@
         "UncheckToOptOut": "Uncheck this box to opt-out.",
         "CheckToOptIn": "Check this box to opt-in.",
         "OptOutErrorNoCookies": "The tracking opt-out feature requires cookies to be enabled.",
-        "OptOutErrorNotHttps": "The tracking opt-out feature may not work because this site was not loaded over HTTPS.",
-        "OptOutErrorDifferentDomains": "The tracking Opt-out feature may not work because it was embedded incorrectly.",
+        "OptOutErrorNotHttps": "The tracking opt-out feature may not work because this site was not loaded over HTTPS. Please reload the page to check if your opt out status changed.",
+        "OptOutErrorWindowOpen": "The tracking Opt-out feature may not work because it looks like the opt out popup was blocked. Please reload the page to check if your opt out status changed.",
         "MissingTrackingCodeEmailSubject": "No traffic for %s recorded in Matomo Analytics, get started now",
         "JsTrackingCodeMissingEmail1": "A few days ago you added the website '%s' to your Matomo Analytics. We just checked and your Matomo doesn't seem to have any recorded traffic for this website.",
         "JsTrackingCodeMissingEmail2": "To begin tracking data and getting insights into your users, you'll need to set up tracking in your website or mobile app. For websites simply embed the tracking code right before the %s tag.",
