--- a/plugins/UserCountry/lang/en.json
+++ b/plugins/UserCountry/lang/en.json
@@ -46,9 +46,9 @@
         "GeoIPNoServerVars": "Matomo cannot find any GeoIP %s variables.",
         "GeoIPPeclCustomDirNotSet": "The %s PHP ini option is not set.",
         "GeoIPServerVarsFound": "Matomo detects the following GeoIP %s variables",
-        "GeoIPUpdaterInstructions": "Enter the download links for your databases below. If you've purchased databases from %3$sMaxMind%4$s, you can find these links %1$shere%2$s. Please contact %3$sMaxMind%4$s if you have trouble accessing them.",
-        "GeoIPUpdaterIntro": "Matomo is currently managing updates for the following GeoIP databases",
-        "GeoLiteCityLink": "If you're using the GeoLite City database, use this link: %1$s%2$s%3$s",
+        "GeoIPUpdaterInstructions": "Enter the download links for your databases below. If you've purchased databases from %3$sdbip%4$s or %1$sMaxMind%2$s, you can find these links in your dbip or MaxMind account. Please contact your geolocation database provider if you have trouble accessing them.",
+        "GeoIPUpdaterIntro": "Matomo is currently managing updates for the following databases",
+        "GeoLiteCityLink": "If you're using the dbip city lite database, use this link: %1$s%2$s%3$s",
         "Geolocation": "Geolocation",
         "GeolocationPageDesc": "On this page you can change how Matomo determines visitor locations.",
         "getCityDocumentation": "This report shows the cities your visitors were in when they accessed your website.",
@@ -59,11 +59,11 @@
         "HowToInstallGeoIPDatabases": "How do I get the GeoIP databases?",
         "HowToInstallGeoIpPecl": "How do I install the GeoIP PECL extension?",
         "HowToInstallNginxModule": "How do I install the GeoIP module for Nginx?",
-        "HowToSetupGeoIP": "How to setup accurate geolocation with GeoIP",
-        "HowToSetupGeoIP_Step1": "%1$sDownload%2$s the GeoLite City database from %3$sMaxMind%4$s.",
-        "HowToSetupGeoIP_Step2": "Extract this file and copy the result, %1$s into the %2$smisc%3$s Matomo subdirectory (you can do this either by FTP or SSH).",
-        "HowToSetupGeoIP_Step3": "Reload this screen. The %1$sGeoIP (PHP)%2$s provider will now be %3$sInstalled%4$s. Select it.",
-        "HowToSetupGeoIP_Step4": "And you're done! You've just setup Matomo to use GeoIP which means you'll be able to see the regions and cities of your visitors along with very accurate country information.",
+        "HowToSetupGeoIP": "How to setup accurate geolocation with dbip",
+        "HowToSetupGeoIP_Step1": "%1$sDownload%2$s the DBIP City Lite database from %3$sdbip%4$s.",
+        "HowToSetupGeoIP_Step2": "Extract this file and copy the result, %1$s into the %2$smisc%3$s Matomo subdirectory and rename it to %4$s (you can do this either by FTP or SSH).",
+        "HowToSetupGeoIP_Step3": "Reload this screen. The %1$sDBIP / GeoIP (PHP)%2$s provider will now be %3$sInstalled%4$s. Select it.",
+        "HowToSetupGeoIP_Step4": "And you're done! You've just setup Matomo to use DBIP which means you'll be able to see the regions and cities of your visitors along with very accurate country information.",
         "HowToSetupGeoIPIntro": "You do not appear to have accurate Geolocation setup. This is a useful feature and without it you will not see accurate and complete location information for your visitors. Here's how you can quickly start using it:",
         "HttpServerModule": "HTTP Server Module",
         "InvalidGeoIPUpdatePeriod": "Invalid period for the GeoIP updater: %1$s. Valid values are %2$s.",
