Update initial geoip configure wizard to use dbip databases.

--- a/plugins/UserCountry/lang/en.json
+++ b/plugins/UserCountry/lang/en.json
@@ -67,9 +67,9 @@
         "HowToSetupGeoIPIntro": "You do not appear to have accurate Geolocation setup. This is a useful feature and without it you will not see accurate and complete location information for your visitors. Here's how you can quickly start using it:",
         "HttpServerModule": "HTTP Server Module",
         "InvalidGeoIPUpdatePeriod": "Invalid period for the GeoIP updater: %1$s. Valid values are %2$s.",
-        "IPurchasedGeoIPDBs": "I purchased more %1$saccurate databases from MaxMind%2$s and want to setup automatic updates.",
+        "IPurchasedGeoIPDBs": "I purchased more accurate databases from %3$sdbip%4$s or %1$sMaxMind%2$s and want to setup automatic updates.",
         "ISPDatabase": "ISP Database",
-        "IWantToDownloadFreeGeoIP": "I want to download the free GeoIP database...",
+        "IWantToDownloadFreeGeoIP": "I want to download the free DBIP database...",
         "Latitude": "Latitude",
         "Latitudes": "Latitudes",
         "Location": "Location",
@@ -84,7 +84,7 @@
         "OrgDatabase": "Organization Database",
         "PeclGeoIPNoDBDir": "The PECL module is looking for databases in %1$s, but this directory does not exist. Please create it and add the GeoIP databases to it. Alternatively, you can set %2$s to the correct directory in your php.ini file.",
         "PeclGeoLiteError": "Your GeoIP database in %1$s is named %2$s. Unfortunately, the PECL module will not recognize it with this name. Please rename it to %3$s.",
-        "PiwikNotManagingGeoIPDBs": "Matomo is not currently managing any GeoIP databases.",
+        "PiwikNotManagingGeoIPDBs": "Matomo is not currently managing any DBIP or MaxMind databases.",
         "PluginDescription": "Reports the location of your visitors: country, region, city and geographic coordinates (latitude\/longitude).",
         "Region": "Region",
         "SetupAutomaticUpdatesOfGeoIP": "Setup automatic updates of GeoIP databases",
