--- a/lang/zh-tw.json
+++ b/lang/zh-tw.json
@@ -447,6 +447,7 @@
         "VisitorIPs": "訪客 IP",
         "Visitors": "訪客",
         "VisitsWith": "%s 的訪問",
+        "VisitorFingerprint": "指紋",
         "VisitorSettings": "訪客設定",
         "VisitType": "訪問類型",
         "VisitTypes": "訪問類型",
