--- a/plugins/UserCountry/lang/pt-br.json
+++ b/plugins/UserCountry/lang/pt-br.json
@@ -3,10 +3,9 @@
         "AssumingNonApache": "Não é possível encontrar a função apache_get_modules, assumindo servidor web não-Apache.",
         "CannotFindGeoIPDatabaseInArchive": "Não pode localizar o arquivo %1$s dentro do arquivo tar %2$s!",
         "CannotFindGeoIPServerVar": "A variável %s não está definida. O servidor pode não estar configurado corretamente.",
-        "CannotFindPeclGeoIPDb": "Não foi possível encontrar um banco de dados de país, região ou cidade para o módulo PECL GeoIP. Verifique se o seu banco de dados GeoIP está localizado em %1$s e é nomeado %2$s ou %3$s de outra forma o módulo PECL não vai advertê-lo.",
+        "CannotFindPeclGeoIPDb": "Não foi possível encontrar uma base de dados de países, regiões ou cidades para o módulo PECL do GeoIP. Certifique-se de que a sua base de dados de geolocalização está localizada em %1$s e tem o nome %2$s ou %3$s, caso contrário o módulo PECL não irá notá-la.",
         "CannotListContent": "Não foi possível listar o conteúdo para %1$s: %2$s",
         "CannotLocalizeLocalIP": "O endereço IP %s é um endereço local e não pode ser geolocalizado.",
-        "CannotSetupGeoIPAutoUpdating": "Parece que você está armazenando seus bancos de dados GeoIP fora do Matomo (podemos dizer, pois não existem bancos de dados no subdiretório Misc, mas o seu GeoIP está funcionando). Matomo não pode atualizar automaticamente seus bancos de dados GeoIP se estiverem localizados fora do diretório misc.",
         "CannotUnzipDatFile": "Não pôde descompactar o arquivo dat em %1$s: %2$s",
         "City": "Cidade",
         "CityAndCountry": "%1$s, %2$s",
@@ -21,12 +20,10 @@
         "VisitLocation": "Localização da visita",
         "CurrentLocationIntro": "De acordo com este provedor, sua localização é",
         "DefaultLocationProviderDesc1": "Detecta a localização padrão de um visitante baseando-se no idioma que ele usa",
-        "DefaultLocationProviderDesc2": "Isso não é muito preciso, então %1$s nós recomendamos a instalação e utilização de %2$s GeoIP %3$s.%4$s",
         "DefaultLocationProviderExplanation": "Você está usando o provedor de localização padrão, que significa que o Matomo irá supor a localização do visitante, baseado no idioma que eles usam. %1$sLeia isso%2$s para aprender como configurar uma geolocalização mais precisa.",
         "DistinctCountries": "%s países distintos",
         "DownloadingDb": "Baixando %s",
         "DownloadNewDatabasesEvery": "Atualizar o banco de dados a cada",
-        "FatalErrorDuringDownload": "Um erro fatal ocorreu durante o download deste arquivo. Pode haver algo de errado com sua conexão de internet, com o banco de dados GeoIP que você baixou ou Matomo. Tente fazer o download e instalá-lo manualmente.",
         "FoundApacheModules": "Matomo encontrou os seguintes módulos do Apache",
         "FromDifferentCities": "cidades diferentes",
         "GeoIPCannotFindMbstringExtension": "Não é possível encontrar a função %1$s. Por favor, certifique-se que a extensão %2$s está instalada e carregada.",
@@ -34,10 +31,7 @@
         "GeoIPDocumentationSuffix": "Para ver os dados para este relatório, você deve configurar GeoIP na guia de administração de Geolocalização. Os %1$s banco de dados GeoIP Maxmind comerciais %2$s são mais precisos que os livres. Para ver como são precisos, clique %3$saqui%4$s.",
         "GeoIPNoDatabaseFound": "Esta implementação GeoIP não encontrou nenhuma base de dados.",
         "GeoIPImplHasAccessTo": "Esta implementação GeoIP tem acesso aos seguintes tipos de bancos de dados",
-        "GeoIPIncorrectDatabaseFormat": "Seu banco de dados GeoIP não parece ter o formato correto. Ele pode estar corrompido. Certifique-se de que você está usando a versão binária e tente substituí-lo com outra cópia.",
-        "GeoIpLocationProviderDesc_Pecl1": "Esse provedor de localização utiliza um banco de dados GeoIP e um módulo PECL para de forma precisa e eficaz determinar a localização seus visitantes.",
         "GeoIpLocationProviderDesc_Pecl2": "Não existem limitações com este fornecedor, por isso é o que nós recomendamos usar.",
-        "GeoIpLocationProviderDesc_Php1": "Este provedor de localização é o mais simples de ser instalado pois não requer configuração de servidor (ideal para hospedagem compartilhada!). Ele usa uma base de dados GeoIP e a API PHP da MaxMind para determinar com precisão a localização dos seus visitantes.",
         "GeoIpLocationProviderDesc_Php2": "Se o seu site recebe uma grande quantidade de tráfego, você pode achar que o provedor de localização está muito lento. Neste caso, você deve instalar a extensão %1$s PECL %2$s ou o %3$s módulo do servidor %4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Este provedor de localização utiliza o módulo GeoIP que foi instalado em seu servidor HTTP. Este provedor é rápido e preciso, mas %1$s só pode ser usado com acompanhamento browser normal. %2$s",
         "GeoIpLocationProviderDesc_ServerBased2": "Se você tiver que importar arquivos de log ou fazer outra coisa que requer o estabelecimento de endereços IP, use a %1$s implementação PECL GeoIP (recomendado) %2$s ou %3$s PHP implementação GeoIP %4$s.",
@@ -46,9 +40,7 @@
         "GeoIPNoServerVars": "Matomo não pode encontrar nenhuma variável GeoIP %s.",
         "GeoIPPeclCustomDirNotSet": "A opção %s do PHP.ini não está definido.",
         "GeoIPServerVarsFound": "Matomo detecta as seguintes variáveis GeoIP %s",
-        "GeoIPUpdaterInstructions": "Digite os links para download de seus bancos de dados abaixo. Se você comprou bancos de dados de %3$s MaxMind %4$s, você pode encontrar esses links %1$s aqui %2$s. Entre em contato com %3$s MaxMind %4$s, se você tiver problemas para acessá-los.",
-        "GeoIPUpdaterIntro": "Matomo gerencia atualmente as atualizações para os seguintes bancos de dados GeoIP",
-        "GeoLiteCityLink": "Se você estiver usando o banco de dados Cidade GeoLite, use este link: %1$s%2$s%3$s.",
+        "GeoLiteCityLink": "Se você está usando a base de dados dbip city lite, use este link: %1$s%2$s%3$s",
         "Geolocation": "Geolocalização",
         "GeolocationPageDesc": "Nesta página você pode mudar a forma como Matomo determina localização dos visitantes.",
         "getCityDocumentation": "Este relatório mostra as cidades que seus visitantes estavam quando acessou seu site.",
@@ -56,20 +48,17 @@
         "getCountryDocumentation": "Este relatório mostra qual país seus visitantes estavam quando acessaram o site.",
         "getRegionDocumentation": "Este relatório mostra que região os visitantes estavam quando acessaram seu site.",
         "HowToInstallApacheModule": "Como faço para instalar o módulo GeoIP para o Apache?",
-        "HowToInstallGeoIPDatabases": "Como eu consigo as bases GeoIP?",
+        "HowToInstallGeoIPDatabases": "Como eu consigo bases de dados de geolocalização?",
         "HowToInstallGeoIpPecl": "Como faço para instalar a extensão GeoIP PECL?",
         "HowToInstallNginxModule": "Como faço para instalar o módulo GeoIP para Nginx?",
-        "HowToSetupGeoIP": "Como configurar geolocalização exata com GeoIP",
-        "HowToSetupGeoIP_Step1": "%1$sDownload%2$s do banco de dados GeoLite City de %3$sMaxMind%4$s.",
-        "HowToSetupGeoIP_Step2": "Estraia este arquivo e copie o conteúdo %1$s no diretório %2$smisc%3$s do Matomo (você pode fazer isso por FTP ou SSH).",
-        "HowToSetupGeoIP_Step3": "Atualize essa tela. O %1$s Provedor GeoIP (PHP) %2$s agora será de %3$sinstalado%4$s. Selecione-o.",
-        "HowToSetupGeoIP_Step4": "E está feito! Você acabou de configurar Matomo para usar GeoIP, o que significa que você vai ser capaz de ver as regiões e cidades de seus visitantes, juntamente com informações muito precisas sobre o país.",
+        "HowToSetupGeoIP": "Como configurar geolocalização precisa com dbip",
+        "HowToSetupGeoIP_Step1": "%1$sBaixar%2$s a base de dados DBIP City Lite da %3$sdbip%4$s.",
         "HowToSetupGeoIPIntro": "Aparentemente você não possui configurações precisas de geolocalização. Este é um recurso útil e sem ele você não verá as informações de localização precisas e completas para os seus visitantes. Veja como você pode rapidamente começar a usá-lo:",
         "HttpServerModule": "Módulo do servidor HTTP",
         "InvalidGeoIPUpdatePeriod": "Período inválido para o atualizador GeoIP: %1$s. Os valores válidos são %2$s.",
-        "IPurchasedGeoIPDBs": "Eu comprei %1$s bases de dados mais precisas de MaxMind %2$s e quero configurar as atualizações automáticas.",
+        "IPurchasedGeoIPDBs": "Eu adquiri bases de dados mais precisas da %3$sdbip%4$s ou da %1$sMaxMind%2$s e quero configurar atualizações automáticas.",
         "ISPDatabase": "Base de dados de provedores de Internet",
-        "IWantToDownloadFreeGeoIP": "Quero baixar a base de dados GeoIP gratuita...",
+        "IWantToDownloadFreeGeoIP": "Quero baixar a base de dados DBIP grátis...",
         "Latitude": "Latitude",
         "Latitudes": "Latitudes",
         "Location": "Localização",
@@ -82,15 +71,9 @@
         "NoDataForGeoIPReport2": "Para ativar a geolocalização mais precisa, mude a configuração %1$s aqui%2$s e use uma %3$s base de dados no nível de cidade %4$s.",
         "Organization": "Organização",
         "OrgDatabase": "Base de dados da organização",
-        "PeclGeoIPNoDBDir": "O módulo PECL está à procura de bases de dados em %1$s mas este diretório não existe. Por favor, crie-o e adicione as bases de dados GeoIP a ele. Como alternativa, você pode definir %2$s para o diretório correto em seu arquivo php.ini.",
-        "PeclGeoLiteError": "Sua base de dados GeoIP em %1$s tem o nome %2$s. Infelizmente, o módulo PECL não irá reconhecê-la com este nome. Por favor, mude o nome para %3$s.",
-        "PiwikNotManagingGeoIPDBs": "Matomo atualmente não gerencia nenhuma base de dados GeoIP.",
         "PluginDescription": "Informa a localização de seus visitantes: país, região, cidade e coordenadas geográficas (latitude \/ longitude).",
         "Region": "Região",
-        "SetupAutomaticUpdatesOfGeoIP": "Configurar atualizações automáticas das bases de dados GeoIP",
         "SubmenuLocations": "Locais",
-        "TestIPLocatorFailed": "Matomo tentou verificar a localização de um endereço IP conhecido (%1$s), mas o servidor retornou %2$s. Se este provedor estivsse configurado corretamente, ele voltaria %3$s.",
-        "ThisUrlIsNotAValidGeoIPDB": "O arquivo baixado não é uma base de dados GeoIP válida. Por favor verifique novamente a URL ou baixe o arquivo manualmente.",
         "ToGeolocateOldVisits": "Para obter os dados de localização para as suas visitas antigas, use o script descrito %1$s aqui %2$s.",
         "UnsupportedArchiveType": "Encontrado tipo de arquivo não suportado %1$s.",
         "UpdaterHasNotBeenRun": "O atualizador nunca foi executado.",
