--- a/plugins/UserCountry/lang/sq.json
+++ b/plugins/UserCountry/lang/sq.json
@@ -6,7 +6,7 @@
         "CannotFindPeclGeoIPDb": "S’u gjet dot bazë të dhënash vendesh, rajonesh apo qytetesh për modulin GeoIP PECL. Sigurohuni që baza juaj e të dhënave GeoIP gjendet te %1$s dhe është emërtuar %2$s ose %3$s, përndryshe moduli PECL nuk do ta vërë re.",
         "CannotListContent": "S’paraqet dot lëndën për %1$s: %2$s",
         "CannotLocalizeLocalIP": "Adresa IP %s është një adresë vendore dhe s’gjeolokalizohet dot.",
-        "CannotSetupGeoIPAutoUpdating": "Duket se bazat tuaja të të dhënave GeoIP i depozitoni jashtë Matomo-s (e dimë ngaqë s’ka baza të dhënash te nëndrejtoria misc, por GeoIP-ja juaj funksionon). Matomo s’i përditëson dot vetvetiu bazat tuaja të të dhënave GeoIP, nëse gjenden jashtë drejtorisë misc.",
+        "CannotSetupGeoIPAutoUpdating": "Duket se bazat tuaja të të dhënave GeoIP i depozitoni jashtë Matomo-s (e dimë, ngaqë s’ka baza të dhënash te nëndrejtoria misc, por GeoIP-ja juaj funksionon). Matomo s’i përditëson dot vetvetiu bazat tuaja të të dhënave për gjeovendëzim, nëse gjenden jashtë drejtorisë misc.",
         "CannotUnzipDatFile": "S’çzipoi dot kartelën dat te %1$s: %2$s",
         "City": "Qytet",
         "CityAndCountry": "%1$s, %2$s",
@@ -21,12 +21,12 @@
         "VisitLocation": "Vend Vizite",
         "CurrentLocationIntro": "Sipas këtij furnizuesi, gjendeni në",
         "DefaultLocationProviderDesc1": "Furnizuesi parazgjedhje i vendeve e hamendëson vendin e një vizitori bazuar në gjuhën e përdorur prej tyre.",
-        "DefaultLocationProviderDesc2": "Kjo s’është shumë e saktë, ndaj %1$skëshillojmë instalimin dhe përdorimin e %2$sGeoIP%3$s.%4$s",
+        "DefaultLocationProviderDesc2": "Kjo s’është shumë e saktë, ndaj %1$skëshillojmë instalimin dhe përdorimin e %2$snjë baze të dhënash gjeovendëzimi%3$s.%4$s",
         "DefaultLocationProviderExplanation": "Po përdorni furnizuesin parazgjedhje të vendeve, që do të thotë se Matomo do ta hamendësojë vendin e vizitorit bazuar në gjuhën që ky përdor. %1$sLexoni këtë%2$s që të mësoni se si të rregulloni gjeovendëzim më të saktë.",
         "DistinctCountries": "%s vende ndaras",
         "DownloadingDb": "Po shkarkohet %s",
         "DownloadNewDatabasesEvery": "Përditësoji bazat e të dhënave çdo",
-        "FatalErrorDuringDownload": "Ndodhi një gabim fatal teksa shkarkohej kjo kartelë. Mund të ketë diçka gabim me lidhjen tuaj internet, me bazën tuaj të të dhënave GeoIP që shkarkuat ose me Matomo-n. Provoni ta shkarkoni dhe instaloni dorazi.",
+        "FatalErrorDuringDownload": "Ndodhi një gabim fatal teksa shkarkohej kjo kartelë. Mund të ketë diçka gabim me lidhjen tuaj internet, me bazën tuaj të të dhënave për gjeovendëzim që shkarkuat ose me Matomo-n. Provoni ta shkarkoni dhe instaloni dorazi.",
         "FoundApacheModules": "Matomo gjeti modulet Apache vijues",
         "FromDifferentCities": "qytete të ndryshme",
         "GeoIPCannotFindMbstringExtension": "S’gjendet dot funksioni %1$s. Ju lutemi, sigurohuni që zgjerimi %2$s është i instaluar dhe i ngarkuar.",
@@ -34,10 +34,10 @@
         "GeoIPDocumentationSuffix": "Që të mund të shihni të dhëna për këtë raport, duhet të rregulloni GeoIP-në te skeda e përgjegjësit për Gjeovendëzimin. Bazat komerciale të të dhënave GeoIP %1$sMaxmind%2$s janë më të sakta se sa ato falas. Që të shihni se sa të sakta janë, klikoni %3$skëtu%4$s.",
         "GeoIPNoDatabaseFound": "Ky sendërtim i GeoIP-së s’qe në gjendje të gjente ndonjë bazë të dhënash.",
         "GeoIPImplHasAccessTo": "Ky sendërtim i GeoIP-së mund të përdorë llojet vijuese të bazave të të dhënave",
-        "GeoIPIncorrectDatabaseFormat": "Baza juaj e të dhënave GeoIP nuk duket se është në formatin e duhur. Mund të jetë e dëmtuar. Sigurohuni se po përdorni versionin dyor dhe provoni ta zëvendësoni me një kopje tjetër.",
-        "GeoIpLocationProviderDesc_Pecl1": "Ky furnizues vendesh përdor një bazë të dhënash GeoIP dhe një modul PECL për të përcaktuar me saktësi dhe efikasitet vendin e vizitorëve tuaj.",
+        "GeoIPIncorrectDatabaseFormat": "Baza juaj e të dhënave të gjeovendëzimit nuk duket se është në formatin e duhur. Mund të jetë e dëmtuar. Sigurohuni se po përdorni versionin dyor dhe provoni ta zëvendësoni me një kopje tjetër.",
+        "GeoIpLocationProviderDesc_Pecl1": "Ky furnizues vendesh përdor bazë të dhënash gjeovendëzimi dhe modul PECL për të përcaktuar me saktësi dhe efikasitet vendin e vizitorëve tuaj.",
         "GeoIpLocationProviderDesc_Pecl2": "Me këtë furnizues s’ka kufizime, ndaj është ai që këshillojmë të përdoret.",
-        "GeoIpLocationProviderDesc_Php1": "Ky furnizues vendesh është më i thjeshti për t’u instaluar, ngaqë nuk lyp formësim shërbyesish (ideal për strehim të përbashkët!). Përdor një bazë të dhënash GeoIP dhe API-n PHP të MaxMind-it, për të përcaktuar saktë vendin e vizitorëve tuaj.",
+        "GeoIpLocationProviderDesc_Php1": "Ky furnizues vendesh është më i thjeshti për t’u instaluar, ngaqë nuk lyp formësim shërbyesish (ideal për strehim të përbashkët!). Përdor bazë të dhënash gjeovendëzimi dhe API-n PHP të MaxMind-it, për të përcaktuar saktë vendin e vizitorëve tuaj.",
         "GeoIpLocationProviderDesc_Php2": "Nëse sajti juaj ka shumë trafik, mund të shihni se ky furnizues vendesh është shumë i ngadaltë. Në këtë rast, do të duhej të instaloni %1$szgjerimin PECL%2$s ose një %3$smodul shërbyesi%4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Ky furnizues vendesh përdor modulin GeoIP që është instaluar në shërbyesin tuaj HTTP. Ky furnizues është i shpejtë dhe i saktë, por %1$smund të përdoret vetëm me ndjekje normale shfletuesi.%2$s",
         "GeoIpLocationProviderDesc_ServerBased2": "Nëse keni për të importuar kartela regjistër ose ju duhet të bëni diçka tjetër që lyp caktim adresash IP, përdorni %1$ssendërtimin GeoIP PECL (e këshilluar)%2$s ose %3$ssendërtimin GeoIP PHP%4$s.",
@@ -46,9 +46,9 @@
         "GeoIPNoServerVars": "Matomo s’gjen dot ndryshore GeoIP %s.",
         "GeoIPPeclCustomDirNotSet": "S’është caktuar mundësia %s PHP ini.",
         "GeoIPServerVarsFound": "Matomo pikas ndryshoret vijuese GeoIP %s",
-        "GeoIPUpdaterInstructions": "Jepni më poshtë lidhjet e shkarkimeve për bazat tuaja të të dhënave. Nëse keni blerë baza të dhënash nga %3$sMaxMind%4$s, këto lidhje mund t’i gjeni %1$skëtu%2$s. Ju lutemi, lidhuni me %3$sMaxMind%4$s, nëse keni probleme me hyrjen në to.",
-        "GeoIPUpdaterIntro": "Matomo po administron përditësime për bazat vijuese të të dhënave GeoIP",
-        "GeoLiteCityLink": "Nëse përdorni bazën e të dhënave GeoLite City, përdorni këtë lidhje: %1$s%2$s%3$s",
+        "GeoIPUpdaterInstructions": "Jepni më poshtë lidhjet e shkarkimeve për bazat tuaja të të dhënave. Nëse keni blerë baza të dhënash nga %3$sdbip%4$s ose %1$sMaxMind%2$s, këto lidhje mund t’i gjeni te llogaria juaj dbip ose MaxMind. Nëse keni probleme me hyrjen në to, ju lutemi, lidhuni me furnizuesin tuaj të bazës së të dhënave të gjeovendëzimit.",
+        "GeoIPUpdaterIntro": "Matomo po administron përditësime për bazat vijuese të të dhënave",
+        "GeoLiteCityLink": "Nëse përdorni bazën e të dhënave Dbip City Lite, përdorni këtë lidhje: %1$s%2$s%3$s",
         "Geolocation": "Gjeovendëzim",
         "GeolocationPageDesc": "Në këtë faqe mund të ndryshoni mënyrën se si përcakton Matomo vendndodhjet e vizitorëve.",
         "getCityDocumentation": "Ky raport shfaq qytetet ku gjendeshin vizitorët tuaj kur përdorën sajtin tuaj.",
@@ -56,20 +56,20 @@
         "getCountryDocumentation": "Ky raport shfaq vendet ku gjendeshin vizitorët tuaj kur përdorën sajtin tuaj.",
         "getRegionDocumentation": "Ky raport shfaq rajonet ku gjendeshin vizitorët tuaj kur përdorën sajtin tuaj.",
         "HowToInstallApacheModule": "Si ta instaloj modulin GeoIP për Apache?",
-        "HowToInstallGeoIPDatabases": "Si t’i marr bazat e të dhënave GeoIP?",
+        "HowToInstallGeoIPDatabases": "Si të marr baza të dhënash gjeovendëzimi?",
         "HowToInstallGeoIpPecl": "Si ta instaloj zgjerimin GeoIP PECL?",
         "HowToInstallNginxModule": "Si ta instaloj modulin GeoIP për Nginx?",
-        "HowToSetupGeoIP": "Si të rregullohet gjeovendëzim i saktë me GeoIP?",
-        "HowToSetupGeoIP_Step1": "%1$sShkarkoni%2$s bazën e të dhënave GeoLite City prej %3$sMaxMind%4$s.",
-        "HowToSetupGeoIP_Step2": "Përftojeni këtë kartelë dhe kopjojeni përfundimin, %1$s te nëndrejtoria %2$smisc%3$s e Matomo-s (këtë mund ta bëni me FTP ose SSH).",
-        "HowToSetupGeoIP_Step3": "Ringarkoni këtë skenë. Furnizuesi %1$sGeoIP (PHP)%2$s tani do të jetë %3$sinstaluar%4$s. Përzgjidheni.",
-        "HowToSetupGeoIP_Step4": "Dhe mbaruat! Sapo e rregulluat Matomo-n të përdorë GeoIP, që do të thotë se do të jeni në gjendje të shihni rajonet dhe qytetet e vizitorëve tuaj, tok me të dhëna shumë të sakta të vendit.",
+        "HowToSetupGeoIP": "Si të rregullohet gjeovendëzim i saktë me dbip?",
+        "HowToSetupGeoIP_Step1": "%1$sShkarkoni%2$s bazën e të dhënave DBIP City Lite prej %3$sdbip%4$s.",
+        "HowToSetupGeoIP_Step2": "Përftojeni këtë kartelë dhe kopjojeni përfundimin, %1$s te nëndrejtoria %2$smisc%3$s e Matomo-s dhe riemërtojeni si %4$s (këtë mund ta bëni me FTP ose SSH).",
+        "HowToSetupGeoIP_Step3": "Ringarkoni këtë skenë. Furnizuesi %1$sDBIP \/ GeoIP (PHP)%2$s tani do të jetë %3$sinstaluar%4$s. Përzgjidheni.",
+        "HowToSetupGeoIP_Step4": "Dhe mbaruat! Sapo e rregulluat Matomo-n të përdorë DBIP, që do të thotë se do të jeni në gjendje të shihni rajonet dhe qytetet e vizitorëve tuaj, tok me të dhëna shumë të sakta të vendit.",
         "HowToSetupGeoIPIntro": "Nuk duket se keni rregulluar Gjeovendëzim të saktë. Kjo është një veçori e dobishme dhe pa të nuk do të shihni të dhëna të sakta dhe të plota vendesh për vizitorët tuaj. Ja se si mund të filloni ta përdorni shpejt e shpejt:",
         "HttpServerModule": "Modul Shërbyesi HTTP",
         "InvalidGeoIPUpdatePeriod": "Periudhë e pavlefshme për përditësuesin GeoIP: %1$s. Vlera të vlefshme janë %2$s.",
-        "IPurchasedGeoIPDBs": "Kam blerë %1$sbaza të dhënash më të sakta nga MaxMind%2$s dhe dua të rregulloj përditësime të vetvetishme.",
+        "IPurchasedGeoIPDBs": "Bleva baza të dhënash më të sakta nga %3$sdbip%4$s ose %1$sMaxMind%2$s dhe dua të rregulloj përditësime të vetvetishme.",
         "ISPDatabase": "Bazë të Dhënash MShI",
-        "IWantToDownloadFreeGeoIP": "Dua të shkarkoj bazën e lirë të të dhënave GeoIP…",
+        "IWantToDownloadFreeGeoIP": "Dua të shkarkoj bazën DBIP falas të të dhënave…",
         "Latitude": "Gjerësi gjeografike",
         "Latitudes": "Gjerësi gjeografike",
         "Location": "Vend",
@@ -82,15 +82,15 @@
         "NoDataForGeoIPReport2": "Që të aktivizoni gjeovendëzim të saktë, ndryshoni rregullimet %1$skëtu%2$s dhe përdorni një %3$sbazë të dhënash në nivel qytetesh%4$s.",
         "Organization": "Organizëm",
         "OrgDatabase": "Bazë të dhënash Organizmi",
-        "PeclGeoIPNoDBDir": "Moduli PECL po kërkon për baza të dhënash te %1$s, por kjo drejtori nuk ekziston. Ju lutemi, krijojeni dhe shtoni në të baza të dhënash GeoIP. Përndryshe, mund të caktoni për %2$s drejtorinë e saktë te kartela juaj php.ini.",
-        "PeclGeoLiteError": "Baza juaj e të dhënave GeoIP te %1$s është emërtuar %2$s. Për fat të keq, moduli PECL nuk do ta njohë me këtë emër. Ju lutemi, riemërtojeni si %3$s.",
-        "PiwikNotManagingGeoIPDBs": "Matomo hëpërhë s’administron ndonjë bazë të dhënash GeoIP.",
+        "PeclGeoIPNoDBDir": "Moduli PECL po kërkon për baza të dhënash te %1$s, por kjo drejtori nuk ekziston. Ju lutemi, krijojeni dhe shtoni në të baza të dhënash gjeovendëzimi. Përndryshe, mund të caktoni për %2$s drejtorinë e saktë te kartela juaj php.ini.",
+        "PeclGeoLiteError": "Baza juaj e të dhënave për gjeovendëzim te %1$s është emërtuar %2$s. Për fat të keq, moduli PECL nuk do ta njohë me këtë emër. Ju lutemi, riemërtojeni si %3$s.",
+        "PiwikNotManagingGeoIPDBs": "Matomo hëpërhë s’administron ndonjë bazë të dhënash DBIP ose MaxMind.",
         "PluginDescription": "Raporton vendndodhjen e vizitorëve tuaj: vend, rajon, qytet dhe koordinata gjeografike (gjerësi gjeografike\/gjatësi gjeografike).",
         "Region": "Rajon",
-        "SetupAutomaticUpdatesOfGeoIP": "Rregulloni përditësime të vetvetishme të bazave të të dhënave GeoIP",
+        "SetupAutomaticUpdatesOfGeoIP": "Rregulloni përditësime të vetvetishme të bazave të të dhënave për gjeovendëzim",
         "SubmenuLocations": "Vende",
-        "TestIPLocatorFailed": "Matomo provoi të kontrollojë vendin e një adrese të njohur IP (%1$s), por shërbyesi juaj u përgjigj me %2$s. Nëse ky furnizues është formësuar si duhet, duhej të përgjigjej me %3$s.",
-        "ThisUrlIsNotAValidGeoIPDB": "Kartela e shkarkuar s’është bazë të dhënash GeoIP e vlefshme. Ju lutemi, rikontrolloni URL-në ose shkarkojeni kartelën dorazi.",
+        "TestIPLocatorFailed": "Matomo provoi të kontrollojë vendin e një adrese të njohur IP (%1$s), por shërbyesi juaj s’u përgjigj me ndonjë të dhënë. Ky furnizues mund të mos jetë formësuar si duhet (baza e të dhënave për gjeovendëzim mund të jetë emërtuar jo saktë ose të gjendet në drejtori të gabuar, për shembull).",
+        "ThisUrlIsNotAValidGeoIPDB": "Kartela e shkarkuar s’është bazë të dhënash gjeovendëzimi e vlefshme. Ju lutemi, rikontrolloni URL-në ose shkarkojeni kartelën dorazi.",
         "ToGeolocateOldVisits": "Që të kini të dhëna vendesh për vizitat tuaja të vjetra, përdorni programthin e përshkruar %1$skëtu%2$s.",
         "UnsupportedArchiveType": "U has lloj i pambuluar arkivi %1$s.",
         "UpdaterHasNotBeenRun": "Përditësuesi s’është xhiruar ndonjëherë.",
