backing up some code

--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -6,6 +6,7 @@
         "ResetTwoFactorAuthentication": "Reset two-factor authentication",
         "ResetTwoFactorAuthenticationInfo": "If the user can no longer log in due to lost recovery codes or a lost authentication device, you can reset two-factor authentication for the user, so they can log in again.",
         "AddUser": "Add a new user",
+        "CreateToken": "Create token",
         "AddExistingUser": "Add an existing user",
         "AddNewUser": "Add new user",
         "EditUser": "Edit user",
@@ -90,6 +91,8 @@
         "TokenAuth": "API Authentication Token",
         "TokenRegenerateConfirmSelf": "Changing the API authentication token will invalidate your own token. If the current token is in use, you need to update all API clients with the newly generated token. Do you really want to change your authentication token?",
         "TokenRegenerateTitle": "Regenerate",
+        "TokenSuccessfullyDeleted": "All tokens were successfully deleted",
+        "TokensSuccessfullyDeleted": "Token was successfully deleted",
         "TypeYourPasswordAgain": "Type your new password again.",
         "TypeYourCurrentPassword": "Please type your current password to confirm the password change.",
         "User": "User",
