--- a/lang/en.json
+++ b/lang/en.json
@@ -389,6 +389,7 @@
         "Search": "Search",
         "Clear": "Clear",
         "SearchNoResults": "No results",
+        "Security": "Security",
         "SeeAll": "see all",
         "SeeTheOfficialDocumentationForMoreInformation": "See the %1$sofficial documentation%2$s for more information.",
         "SeeThisFaq": "See %1$sthis faq%2$s.",
