--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -91,8 +91,9 @@
         "TokenAuth": "API Authentication Token",
         "TokenRegenerateConfirmSelf": "Changing the API authentication token will invalidate your own token. If the current token is in use, you need to update all API clients with the newly generated token. Do you really want to change your authentication token?",
         "TokenRegenerateTitle": "Regenerate",
-        "TokenSuccessfullyDeleted": "All tokens were successfully deleted",
-        "TokensSuccessfullyDeleted": "Token was successfully deleted",
+        "TokensSuccessfullyDeleted": "All tokens were successfully deleted",
+        "TokenSuccessfullyDeleted": "Token was successfully deleted",
+        "TokenAuthIntro": "Tokens you have generated can be used to access the Matomo reporting API, Matomo tracking API, and exported Matomo widgets and have the same permissions as your regular user login.",
         "TypeYourPasswordAgain": "Type your new password again.",
         "TypeYourCurrentPassword": "Please type your current password to confirm the password change.",
         "User": "User",
