Improve set up tracking code no data page (#15367)

--- a/plugins/SitesManager/lang/en.json
+++ b/plugins/SitesManager/lang/en.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "If the visitor's user agent string contains any of the strings you specify, the visitor will be excluded from Matomo.",
         "GlobalSettings": "Global settings",
         "GlobalWebsitesSettings": "Global websites settings",
+        "InstallationGuides": "Installation Guides",
+        "InstallationGuidesIntro": "We provide step by step guides explaining how to embed the tracking code for some popular CMS and website builders:",
+        "ExtraInformationNeeded": "To setup Matomo on your system, you may need the following information:",
+        "Integrations": "Integrations",
         "HelpExcludedIpAddresses": "Enter the list of IPs, one per line, that you wish to exclude from being tracked by Matomo. You can use CIDR notation eg. %1$s or you can use wildcards, eg. %2$s or %3$s",
         "JsTrackingTagHelp": "Here is the JavaScript Tracking code to include on all your pages",
         "KeepURLFragments": "Page URL fragments tracking",
@@ -74,7 +78,6 @@
         "SiteWithoutDataDescription": "No analytics data has been tracked for this website yet.",
         "SiteWithoutDataSetupTracking": "Please set up the %1$stracking code%2$s below into your website or mobile app if you haven't done already.",
         "SiteWithoutDataMessageDisappears": "This message will disappear as soon as some data was tracked for this website.",
-        "SiteWithoutDataSetupGoals": "In the meantime, maybe you would like to %1$sset up some goals%2$s or learn more about the %3$sfeatures%4$s of Matomo in one of our %5$sguides%6$s or %7$sFAQs%8$s.",
         "SiteWithoutDataIgnoreMessage": "Don't show this message for the next hour",
         "SuperUserAccessCan": "A user with Super User access can also %1$s specify global settings%2$s for new websites.",
         "Timezone": "Time zone",
