--- a/plugins/CoreAdminHome/lang/nl.json
+++ b/plugins/CoreAdminHome/lang/nl.json
@@ -113,6 +113,9 @@
         "YouMayOptOut3": "Hierdoor wordt uw privacy beschermd, maar wordt ook voorkomen dat de beheerder van de website van uw acties kan leren en een betere ervaring voor u en andere gebruikers kan creëren.",
         "UncheckToOptOut": "Schakel dit vakje uit om u af te melden.",
         "CheckToOptIn": "Schakel dit vakje in om u aan te melden.",
+        "OptOutErrorNoCookies": "Voor de tracking opt-out functie moeten cookies zijn ingeschakeld.",
+        "OptOutErrorNotHttps": "De tracking opt-out-functie werkt mogelijk niet omdat deze site niet via HTTPS is geladen. Laad de pagina opnieuw om te controleren of uw opt-out status is gewijzigd.",
+        "OptOutErrorWindowOpen": "De tracking Opt-out-functie werkt mogelijk niet omdat het lijkt alsof de opt-out-pop-up is geblokkeerd. Laad de pagina opnieuw om te controleren of uw opt-out status is gewijzigd.",
         "MissingTrackingCodeEmailSubject": "Geen verkeer voor %s opgenomen in Matomo Analyses, begin er nu mee.",
         "JsTrackingCodeMissingEmail1": "Een par dagen geleden heb je de website '%s' aan je Matomo Analyses toegevoegd. We hebben net een controle uitgevoerd en het lijkt alsof Matomo helemaal geen verkeer heeft vastgelegd voor deze website.",
         "JsTrackingCodeMissingEmail2": "Om te beginnen met tracking data en daardoor inzicht te krijgen in je bezoekers moet je eerst tracking inrichten op je website of mobiele app. Voor een website voeg je simpelweg de tracking code in vlak voor de %s tag.",
