--- a/plugins/CustomPiwikJs/lang/nl.json
+++ b/plugins/CustomPiwikJs/lang/nl.json
@@ -1,5 +1,6 @@
 {
     "CustomPiwikJs": {
+        "DiagnosticPiwikJsWritable": "Schrijfbare JavaScript-tracker (%s)",
         "DiagnosticPiwikJsMakeWritable": "We adviseren %1$s schrijfbaar te maken door het volgende commando uit te voeren: %2$s"
     }
 }
