--- a/plugins/UserCountry/lang/pt-br.json
+++ b/plugins/UserCountry/lang/pt-br.json
@@ -6,6 +6,7 @@
         "CannotFindPeclGeoIPDb": "Não foi possível encontrar uma base de dados de países, regiões ou cidades para o módulo PECL do GeoIP. Certifique-se de que a sua base de dados de geolocalização está localizada em %1$s e tem o nome %2$s ou %3$s, caso contrário o módulo PECL não irá notá-la.",
         "CannotListContent": "Não foi possível listar o conteúdo para %1$s: %2$s",
         "CannotLocalizeLocalIP": "O endereço IP %s é um endereço local e não pode ser geolocalizado.",
+        "CannotSetupGeoIPAutoUpdating": "Parece que você está armazenando suas bases de dados de geolocalização fora do Matomo (nós percebemos pois não há bases de dados no subdiretório misc, mas o seu GeoIP está funcionando). O Matomo não pode atualizar automaticamente suas bases de dados de geolocalização se elas estiverem localizadas fora do diretório misc.",
         "CannotUnzipDatFile": "Não pôde descompactar o arquivo dat em %1$s: %2$s",
         "City": "Cidade",
         "CityAndCountry": "%1$s, %2$s",
@@ -20,10 +21,12 @@
         "VisitLocation": "Localização da visita",
         "CurrentLocationIntro": "De acordo com este provedor, sua localização é",
         "DefaultLocationProviderDesc1": "Detecta a localização padrão de um visitante baseando-se no idioma que ele usa",
+        "DefaultLocationProviderDesc2": "Isto não é muito preciso, então %1$srecomendamos instalar e usar %2$suma base de dados de geolocalização%3$s.%4$s",
         "DefaultLocationProviderExplanation": "Você está usando o provedor de localização padrão, que significa que o Matomo irá supor a localização do visitante, baseado no idioma que eles usam. %1$sLeia isso%2$s para aprender como configurar uma geolocalização mais precisa.",
         "DistinctCountries": "%s países distintos",
         "DownloadingDb": "Baixando %s",
         "DownloadNewDatabasesEvery": "Atualizar o banco de dados a cada",
+        "FatalErrorDuringDownload": "Um erro fatal ocorreu ao baixar este arquivo. Pode haver algo errado com a sua conexão Internet, com a base de dados de geolocalização que você baixou, ou com o Matomo. Tente baixá-la e instalá-la manualmente.",
         "FoundApacheModules": "Matomo encontrou os seguintes módulos do Apache",
         "FromDifferentCities": "cidades diferentes",
         "GeoIPCannotFindMbstringExtension": "Não é possível encontrar a função %1$s. Por favor, certifique-se que a extensão %2$s está instalada e carregada.",
@@ -31,6 +34,7 @@
         "GeoIPDocumentationSuffix": "Para ver os dados para este relatório, você deve configurar GeoIP na guia de administração de Geolocalização. Os %1$s banco de dados GeoIP Maxmind comerciais %2$s são mais precisos que os livres. Para ver como são precisos, clique %3$saqui%4$s.",
         "GeoIPNoDatabaseFound": "Esta implementação GeoIP não encontrou nenhuma base de dados.",
         "GeoIPImplHasAccessTo": "Esta implementação GeoIP tem acesso aos seguintes tipos de bancos de dados",
+        "GeoIPIncorrectDatabaseFormat": "Sua base de dados de geolocalização parece não ter o formato correto. Pode estar corrompida. Certifique-se de estar usando a versão binária e tente substituí-la por outra cópia.",
         "GeoIpLocationProviderDesc_Pecl2": "Não existem limitações com este fornecedor, por isso é o que nós recomendamos usar.",
         "GeoIpLocationProviderDesc_Php2": "Se o seu site recebe uma grande quantidade de tráfego, você pode achar que o provedor de localização está muito lento. Neste caso, você deve instalar a extensão %1$s PECL %2$s ou o %3$s módulo do servidor %4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Este provedor de localização utiliza o módulo GeoIP que foi instalado em seu servidor HTTP. Este provedor é rápido e preciso, mas %1$s só pode ser usado com acompanhamento browser normal. %2$s",
@@ -74,6 +78,7 @@
         "PluginDescription": "Informa a localização de seus visitantes: país, região, cidade e coordenadas geográficas (latitude \/ longitude).",
         "Region": "Região",
         "SubmenuLocations": "Locais",
+        "ThisUrlIsNotAValidGeoIPDB": "O arquivo baixado não é uma base de dados de geolocalização válida. Por favor verifique novamente a URL ou baixe o arquivo manualmente.",
         "ToGeolocateOldVisits": "Para obter os dados de localização para as suas visitas antigas, use o script descrito %1$s aqui %2$s.",
         "UnsupportedArchiveType": "Encontrado tipo de arquivo não suportado %1$s.",
         "UpdaterHasNotBeenRun": "O atualizador nunca foi executado.",
