--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -6,7 +6,6 @@
         "ResetTwoFactorAuthentication": "Reset two-factor authentication",
         "ResetTwoFactorAuthenticationInfo": "If the user can no longer log in due to lost recovery codes or a lost authentication device, you can reset two-factor authentication for the user, so they can log in again.",
         "AddUser": "Add a new user",
-        "CreateToken": "Create token",
         "AddExistingUser": "Add an existing user",
         "AddNewUser": "Add new user",
         "EditUser": "Edit user",
@@ -14,6 +13,12 @@
         "SaveBasicInfo": "Save Basic Info",
         "Alias": "Alias",
         "AllWebsites": "All websites",
+        "LastUsed": "Last used",
+        "ExpireDate": "Expire date",
+        "AuthTokens": "Auth tokens",
+        "AuthTokenPurpose": "What are you using this token for?",
+        "NoTokenCreatedYetCreateNow": "No token created yet, %screate a new token now%s.",
+        "CreateNewToken": "Create new token",
         "AnonymousAccessConfirmation": "You are about to grant the anonymous user the 'view' access to this website. This means your analytics reports and your visitors information will be publicly viewable by anyone even without a login. Are you sure you want to proceed?",
         "AnonymousUser": "Anonymous user",
         "AnonymousUserHasViewAccess": "Note: the %1$s user has %2$s access to this website.",
@@ -93,7 +98,10 @@
         "TokenRegenerateTitle": "Regenerate",
         "TokensSuccessfullyDeleted": "All tokens were successfully deleted",
         "TokenSuccessfullyDeleted": "Token was successfully deleted",
-        "TokenAuthIntro": "Tokens you have generated can be used to access the Matomo reporting API, Matomo tracking API, and exported Matomo widgets and have the same permissions as your regular user login.",
+        "DeleteAllTokens": "Delete all tokens",
+        "ExpiredTokensDeleteAutomatically": "Tokens with an expire date will be deleted automatically.",
+        "TokensWithExpireDateCreationBySystem": "Tokens with expire date can currently only be created by the system",
+        "TokenAuthIntro": "Tokens you have generated can be used to access the Matomo reporting API, Matomo tracking API, and exported Matomo widgets and have the same permissions as your regular user login. You can use these tokens also for the Matomo Mobile app.",
         "TypeYourPasswordAgain": "Type your new password again.",
         "TypeYourCurrentPassword": "Please type your current password to confirm the password change.",
         "User": "User",
