--- a/plugins/UsersManager/lang/en.json
+++ b/plugins/UsersManager/lang/en.json
@@ -18,6 +18,10 @@
         "AuthTokens": "Auth tokens",
         "AuthTokenPurpose": "What are you using this token for?",
         "NoTokenCreatedYetCreateNow": "No token created yet, %screate a new token now%s.",
+        "TokenSuccessfullyGenerated": "Token successfully generated",
+        "ConfirmTokenCopied": "I confirm I copied the token.",
+        "GoBackSecurityPage": "Go back to security page.",
+        "PleaseStoreToken": "Please store your token securely as you will not be able to access or see the token again.",
         "CreateNewToken": "Create new token",
         "AnonymousAccessConfirmation": "You are about to grant the anonymous user the 'view' access to this website. This means your analytics reports and your visitors information will be publicly viewable by anyone even without a login. Are you sure you want to proceed?",
         "AnonymousUser": "Anonymous user",
