--- a/plugins/SitesManager/lang/es-ar.json
+++ b/plugins/SitesManager/lang/es-ar.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Si la cadena de agente de usuario del visitante contiene alguna de las cadenas que especificaste, el visitante será excluido de Matomo.",
         "GlobalSettings": "Configuración global",
         "GlobalWebsitesSettings": "Configuración global de los sitios web",
+        "InstallationGuides": "Guías de instalación",
+        "InstallationGuidesIntro": "Ofrecemos guías paso a paso explicando cómo insertar el código de seguimiento para algunos constructores populares de sitios web y CMS:",
+        "ExtraInformationNeeded": "Para instalar Matomo en tu sistema, necesitás la siguiente información:",
+        "Integrations": "Integraciones",
         "HelpExcludedIpAddresses": "Introducí la lista de direcciones IP, una por línea, que deseás excluir de ser rastreadas por Matomo. Podés usar notación CIDR (por ejemplo %1$s) o comodines (por ejemplo: %2$s o %3$s).",
         "JsTrackingTagHelp": "Acá está el código de seguimiento JavaScript para incluir en todas tus páginas",
         "KeepURLFragments": "Seguimiento de fragmentos de la dirección web de la página",
