--- a/plugins/SitesManager/lang/tr.json
+++ b/plugins/SitesManager/lang/tr.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Ziyaretçinin kullandığı uygulama dizgesi belirttiğiniz dizgelerden biri ise ziyaretçi Matomo tarafından izlenmez.",
         "GlobalSettings": "Genel ayarlar",
         "GlobalWebsitesSettings": "Genel web sitesi ayarları",
+        "InstallationGuides": "Kurulum Rehberleri",
+        "InstallationGuidesIntro": "Yaygın kullanılan bazı içerik yönetimi sistemleri ve web sitesi hazırlayıcıları için izleme kodunun adım adım nasıl ekleneceğini anlatan rehberler hazırladık:",
+        "ExtraInformationNeeded": "Sisteminize Matomo kurmak için şu bilgilere gerek duyabilirsiniz:",
+        "Integrations": "Bütünleştirmeler",
         "HelpExcludedIpAddresses": "Matomo tarafından izlenmesini istemediğiniz IP adreslerinin listesini, her satıra bir adres gelecek şekilde yazın. %1$sgibi CIDR biçimi ya da %2$s ve %3$s gibi genel arama karakterleri kullanılabilir.",
         "JsTrackingTagHelp": "Tüm sayfalarınıza eklemeniz gereken JavaScript izleme kodu",
         "KeepURLFragments": "Sayfa adresi bölünmeleri izleme",
