--- a/plugins/CoreUpdater/lang/tr.json
+++ b/plugins/CoreUpdater/lang/tr.json
@@ -28,6 +28,8 @@
         "InstallingTheLatestVersion": "Son sürüm yükleniyor",
         "LatestBetaRelease": "Son Beta sürümü",
         "LatestStableRelease": "Son kararlı sürüm",
+        "LatestXStableRelease": "Son kararlı %s",
+        "LatestXBetaRelease": "Son beta %s",
         "LtsSupportVersion": "Uzun Dönem Desteklenen Sürüm",
         "ListOfSqlQueriesFYI": "BİLGİ: Veritabanınızı Matomo %s sürümüne güncellemek için yürütülecek sorgular ve konsol komutları şunlardır",
         "TheseSqlQueriesWillBeExecuted": "Yürütülecek SQL sorguları:",
