--- a/plugins/SitesManager/lang/sq.json
+++ b/plugins/SitesManager/lang/sq.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Nëse vargu i agjentit të përdoruesit për një vizitor përmban një nga vargjet që përcaktoni, vizitori do të përjashtohet nga Matomo.",
         "GlobalSettings": "Rregullime globale",
         "GlobalWebsitesSettings": "Rregullime globale për sajte",
+        "InstallationGuides": "Udhërrëfyes Instalimi",
+        "InstallationGuidesIntro": "Furnizojmë udhërrëfyes hap pas hapi që shpjegojnë si të trupëzohet kodi i gjurmimit për disa CMS dhe krijues popullorë sajtesh:",
+        "ExtraInformationNeeded": "Që të ujdisni Matomo-n në sistemin tuaj, mund t’ju duhen të dhënat vijuese:",
+        "Integrations": "Integrime",
         "HelpExcludedIpAddresses": "Jepni listën e IP-ve, një për rresht, që dëshironi të përjashtohen nga ndjekja prej Matomo-s. Mund të përdorni shkrimin CIDR, p.sh. %1$s, ose mund të përdorni shenja të gjithëpushtetshme, p.sh., %2$s ose %3$s",
         "JsTrackingTagHelp": "Ky është kodi i Ndjekjes JavaScript që duhet përfshirë në krejt faqet tuaja",
         "KeepURLFragments": "Ndjekje fragmentesh URL-sh Faqesh",
