--- a/plugins/UserCountry/lang/pt-br.json
+++ b/plugins/UserCountry/lang/pt-br.json
@@ -35,7 +35,9 @@
         "GeoIPNoDatabaseFound": "Esta implementação GeoIP não encontrou nenhuma base de dados.",
         "GeoIPImplHasAccessTo": "Esta implementação GeoIP tem acesso aos seguintes tipos de bancos de dados",
         "GeoIPIncorrectDatabaseFormat": "Sua base de dados de geolocalização parece não ter o formato correto. Pode estar corrompida. Certifique-se de estar usando a versão binária e tente substituí-la por outra cópia.",
+        "GeoIpLocationProviderDesc_Pecl1": "Este provedor de localização usa uma base de dados de geolocalização e um módulo PECL para determinar de forma precisa e eficiente a localização de seus visitantes.",
         "GeoIpLocationProviderDesc_Pecl2": "Não existem limitações com este fornecedor, por isso é o que nós recomendamos usar.",
+        "GeoIpLocationProviderDesc_Php1": "Este provedor de localização é o mais simples de instalar pois ele não requer configuração do servidor (ideal para hospedagem compartilhada!). Ele usa uma base de dados de geolocalização e a API PHP da MaxMind para determinar com precisão a localização de seus visitantes.",
         "GeoIpLocationProviderDesc_Php2": "Se o seu site recebe uma grande quantidade de tráfego, você pode achar que o provedor de localização está muito lento. Neste caso, você deve instalar a extensão %1$s PECL %2$s ou o %3$s módulo do servidor %4$s.",
         "GeoIpLocationProviderDesc_ServerBased1": "Este provedor de localização utiliza o módulo GeoIP que foi instalado em seu servidor HTTP. Este provedor é rápido e preciso, mas %1$s só pode ser usado com acompanhamento browser normal. %2$s",
         "GeoIpLocationProviderDesc_ServerBased2": "Se você tiver que importar arquivos de log ou fazer outra coisa que requer o estabelecimento de endereços IP, use a %1$s implementação PECL GeoIP (recomendado) %2$s ou %3$s PHP implementação GeoIP %4$s.",
@@ -44,6 +46,8 @@
         "GeoIPNoServerVars": "Matomo não pode encontrar nenhuma variável GeoIP %s.",
         "GeoIPPeclCustomDirNotSet": "A opção %s do PHP.ini não está definido.",
         "GeoIPServerVarsFound": "Matomo detecta as seguintes variáveis GeoIP %s",
+        "GeoIPUpdaterInstructions": "Insira abaixo os links de download para as suas bases de dados. Se você adquiriu bases de dados da %3$sdbip%4$s ou da %1$sMaxMind%2$s, você pode encontrar estes links em sua conta dbip ou MaxMind. Por favor entre em contato com o seu provedor de base de dados de geolocalização se você tiver dificuldade em encontrá-los.",
+        "GeoIPUpdaterIntro": "O Matomo está atualmente gerenciando atualizações para as seguintes bases de dados",
         "GeoLiteCityLink": "Se você está usando a base de dados dbip city lite, use este link: %1$s%2$s%3$s",
         "Geolocation": "Geolocalização",
         "GeolocationPageDesc": "Nesta página você pode mudar a forma como Matomo determina localização dos visitantes.",
@@ -57,6 +61,9 @@
         "HowToInstallNginxModule": "Como faço para instalar o módulo GeoIP para Nginx?",
         "HowToSetupGeoIP": "Como configurar geolocalização precisa com dbip",
         "HowToSetupGeoIP_Step1": "%1$sBaixar%2$s a base de dados DBIP City Lite da %3$sdbip%4$s.",
+        "HowToSetupGeoIP_Step2": "Extraia este arquivo e copie o resultado %1$s para dentro do subdiretório %2$smisc%3$s do Matomo e renomeie-o para %4$s (você pode fazer isto por FTP ou SSH).",
+        "HowToSetupGeoIP_Step3": "Recarregue esta tela. O provedor %1$sDBIP \/ GeoIP (PHP)%2$s será %3$sinstalado%4$s agora. Selecione-o.",
+        "HowToSetupGeoIP_Step4": "E tudo pronto! Você acabou de configurar o Matomo para usar DBIP, o que significa que você poderá ver as regiões e as cidades dos seus visitantes junto com informações bem precisas dos países.",
         "HowToSetupGeoIPIntro": "Aparentemente você não possui configurações precisas de geolocalização. Este é um recurso útil e sem ele você não verá as informações de localização precisas e completas para os seus visitantes. Veja como você pode rapidamente começar a usá-lo:",
         "HttpServerModule": "Módulo do servidor HTTP",
         "InvalidGeoIPUpdatePeriod": "Período inválido para o atualizador GeoIP: %1$s. Os valores válidos são %2$s.",
@@ -75,9 +82,14 @@
         "NoDataForGeoIPReport2": "Para ativar a geolocalização mais precisa, mude a configuração %1$s aqui%2$s e use uma %3$s base de dados no nível de cidade %4$s.",
         "Organization": "Organização",
         "OrgDatabase": "Base de dados da organização",
+        "PeclGeoIPNoDBDir": "O módulo PECL está procurando bases de dados em %1$s, mas este diretório não existe. Por favor, crie o diretório e adicione as bases de dados de geolocalização nele. Alternativamente, você pode definir %2$s no diretório correto em seu arquivo php.ini.",
+        "PeclGeoLiteError": "Sua base de dados de geolocalização em %1$s está com o nome %2$s. Infelizmente, o módulo PECL não irá reconhecê-la com este nome. Por favor renomeie-a para %3$s.",
+        "PiwikNotManagingGeoIPDBs": "O Matomo não está atualmente gerenciando nenhuma base de dado DBIP ou MaxMind.",
         "PluginDescription": "Informa a localização de seus visitantes: país, região, cidade e coordenadas geográficas (latitude \/ longitude).",
         "Region": "Região",
+        "SetupAutomaticUpdatesOfGeoIP": "Configurar atualizações automáticas das bases de dados de geolocalização",
         "SubmenuLocations": "Locais",
+        "TestIPLocatorFailed": "O Matomo tentou verificar a localização de um endereço IP conhecido (%1$s), mas o seu servidor retornou nenhuma informação. Este provedor pode não estar configurado corretamente (a base de dados de geolocalização pode estar nomeada incorretamente ou localizada em diretório incorreto, por exemplo).",
         "ThisUrlIsNotAValidGeoIPDB": "O arquivo baixado não é uma base de dados de geolocalização válida. Por favor verifique novamente a URL ou baixe o arquivo manualmente.",
         "ToGeolocateOldVisits": "Para obter os dados de localização para as suas visitas antigas, use o script descrito %1$s aqui %2$s.",
         "UnsupportedArchiveType": "Encontrado tipo de arquivo não suportado %1$s.",
@@ -86,6 +98,7 @@
         "UpdaterScheduledForNextRun": "Está programado para ser executado durante a próxima execução do cron job archive.php",
         "UpdaterWasLastRun": "O atualizador foi executado pela última vez em %s.",
         "UpdaterWillRunNext": "A próxima execução está programada para ser executada em %s.",
-        "WidgetLocation": "Localização dos visitantes"
+        "WidgetLocation": "Localização dos visitantes",
+        "InstallGeoIp2": "O Matomo recomenda usar as bases de dados %1$sdbip%2$s, mas isto requer usar o plugin GeoIp2. Se você instalá-lo e ativá-lo (o que deve possivelmente exigir uma atualização de longa duração), você poderá começar a usar bases de dados %1$sdbip%2$s. (Ignore isto se você estiver usando um plugin de terceiro que fornece sua própria funcionalidade de geolocalização.)"
     }
 }
